Prevent screen overflow on search dropdown (#46)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -810,6 +810,8 @@ $green-font-color: #19B028;
   top: -22px;
   border: solid 1px $border-grey;
   z-index: 5; // the input has a z-index of 3 at one point.
+  max-height: 600px;
+  overflow-y: scroll;
 }
 
 .search-bar__avatar {
